[gd_scene load_steps=4 format=3 uid="uid://imp_scene"]

[ext_resource type="Script" path="res://Scripts/Enemies/Imp.gd" id="1_imp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_physics"]
radius = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_hurtbox"]
radius = 20.0

[node name="Imp" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 9
script = ExtResource("1_imp")
enemy_type = "imp"
enemy_display_name = "Imp"
max_health = 10.0
move_speed = 360.0
damage = 5.0
knockback_resistance = 0.5
experience_value = 3
crystal_drop_chance = 0.5
min_crystals = 1
max_crystals = 2
health_bar_width = 64.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_physics")

[node name="VisualsPivot" type="Node2D" parent="."]

[node name="Sprite" type="ColorRect" parent="VisualsPivot"]
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
pivot_offset = Vector2(20, 20)
color = Color(0.6, 0.1, 0.2, 1)

[node name="Eye1" type="ColorRect" parent="VisualsPivot"]
offset_left = -8.0
offset_top = -4.0
offset_right = -4.0
offset_bottom = 4.0
color = Color(1, 0.8, 0, 1)

[node name="Eye2" type="ColorRect" parent="VisualsPivot"]
offset_left = 4.0
offset_top = -4.0
offset_right = 8.0
offset_bottom = 4.0
color = Color(1, 0.8, 0, 1)

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 98
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CircleShape2D_hurtbox")

[node name="HealthBar" type="Node2D" parent="."]

[node name="Background" type="ColorRect" parent="HealthBar"]
offset_left = -32.0
offset_top = -60.0
offset_right = 32.0
offset_bottom = -48.0
color = Color(0.2, 0, 0, 1)

[node name="Fill" type="ColorRect" parent="HealthBar"]
offset_left = -32.0
offset_top = -60.0
offset_right = 32.0
offset_bottom = -48.0
color = Color(1, 0, 0, 1)
